Prevent vertical scrollbar on outer wrapper

--- a/public/css/whonews.css
+++ b/public/css/whonews.css
@@ -46,7 +46,7 @@ html, body {
     height: 100%;
     margin: 0;
     border: 2px solid #444;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .wn-tablet-inner {
